[gd_scene load_steps=2 format=3 uid="uid://cko4ox3ag5fku"]

[ext_resource type="Script" path="res://Enemy/spawner.gd" id="1_gysp2"]

[node name="Spawner" type="Node2D"]
script = ExtResource("1_gysp2")

[node name="Marker2D" type="Marker2D" parent="."]

[node name="Marker2D2" type="Marker2D" parent="."]

[node name="Marker2D3" type="Marker2D" parent="."]

[node name="Marker2D4" type="Marker2D" parent="."]

[node name="Marker2D5" type="Marker2D" parent="."]

[node name="Marker2D6" type="Marker2D" parent="."]

[node name="Timer" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
